--- a/HireRight/Content/styles.css
+++ b/HireRight/Content/styles.css
@@ -503,3 +503,7 @@ button[type="submit"] {
   .form-control {
     font-size: 12pt; } }
 
+@media only screen and (min-width: 1200px) {
+  .pull-right-xl {
+    float: right; } }
+
